Did some frontent work: 1.Removed the link with label "Read" on tags page   The news items are now self-linking.   Added some new style declarations to support the new design

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -108,3 +108,12 @@ table{
 	color: white;
 	border-radius: 5px;
 }
+
+.news-link{
+	color: teal;
+}
+.news-link:hover{
+	border: 1px solid teal;
+	padding: 5px;
+	color: teal;
+}
